--- a/index.css
+++ b/index.css
@@ -3,8 +3,19 @@
     src: url(/Macondo/Macondo-Regular.ttf);
 }
 
+@font-face {
+    font-family: 'fuente2';
+    src: url(./Tiro_Telugu/TiroTelugu-Italic.ttf);
+}
+
+@font-face {
+    font-family: 'fuente3';
+    src: url(./Roboto/Roboto-BlackItalic.ttf);
+}
 
 header{
+    margin: 0;
+    padding: 0;
     display: flex;
     width: 100%;
     flex-wrap: wrap;
@@ -35,8 +46,97 @@ nav{
 }
 a{
 
-    color: whitesmoke;
+    color: black;
     text-decoration: none;
     font-family: 'fuente1';
-    font-size: 900;
+    font-size: 2em;
+    font-weight: 900;
 }
+.section{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-image: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/mujer-cuervo.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+h1{
+    margin: 0;
+    padding: 0;
+    color: grey;
+    font-family: "fuente3";
+    font-size: 6em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.container2{
+    width: 50%;
+}
+.container3{
+    height: 50%;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.imagen{
+    min-width: 90%;
+    min-height: 90%;
+}
+h3{
+    color: darkgrey;
+    font-size: 3em;
+    font-family: "fuente1";
+    padding-left: 20%;
+    padding-top: 20%;
+}
+.contain-boton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.boton{
+    width: 300px;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: beige;
+    font-family: "fuente2";
+    font-size: larger;
+    border-color: black;
+    border-style: solid;
+    overflow: auto;
+    background-color: black;
+    margin-bottom: 2%;
+}
+.parrafo{
+    background: radial-gradient(circle, rgba(2,5,14,0.3665230938416423) 0%, rgba(180,180,180,1) 57%, rgba(228,230,241,0.055672653958944274) 89%);
+    height: 15%;
+    color: black;
+    font-family: "fuente2";
+    font-size: 2em;
+    font-weight: 900;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+
