--- a/index.css
+++ b/index.css
@@ -30,6 +30,10 @@
     }
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 header{
     width: 100%;
     margin: 0;
@@ -70,12 +74,14 @@ a{
     font-family: 'fuente1';
     font-size: 1em;
     font-weight: 900;
+    transition: 1s;
 }
 .lista-nav a:hover{
     font-size: 1.5em;
     text-decoration: underline;
     color: #E7C6FF;
     font-weight: 900;
+
 }
 .section{
     height: 100%;
@@ -140,8 +146,8 @@ h1{
 }
 
 .boton{
-    width: 15%;
-    height: 5%;
+    width: 200px;
+    height: 35px;
     padding: 0;
     margin-top: 5%;
     margin-bottom: 2%;
@@ -157,12 +163,15 @@ h1{
     border-radius: 10px;
     overflow: auto;
     background-color: blueviolet;
+    transition: 1s;
    
 }
 .boton:hover{
     background-color: orchid;
     font-size: small;
     color: #6c07ee;
+    transform: scale(1.2);
+
 }
 .parrafo2{
     background: radial-gradient(circle, rgba(168, 184, 235, 0.367) 0%, rgb(231, 190, 221) 57%, rgba(118, 134, 212, 0.056) 89%);
@@ -170,6 +179,7 @@ h1{
     margin-top: 5%;
     margin-left: 2%;
     margin-right: 2%;
+    border-radius: 20px;
     color:  rgba(237, 238, 243, 0.056);
     font-family: "fuente2";
     font-size: 1.5em;
@@ -178,66 +188,79 @@ h1{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    transition: 2s;
 }
 .parrafo2:hover{
     color: #62088f;
     background-color: pink;
 }
+
+.contain-arts {
+    width: 100%;
+    background: radial-gradient(blueviolet, pink, blueviolet);
+    display: flex;
+    justify-content: space-around;
+}
+
 .articles{
-    height: 100%;
-    border: 0;
-    padding: 0;
+    width: 85%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.contain-arts article{
+    width: 70%;
+    height: 60vh;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    background: radial-gradient(blueviolet, pink, blueviolet);
-}
-.imagen1{
-    height: 80%;
     width: 25%;
     border-radius: 20px;
     margin: 20px 20px 20px 20px;
     padding:0;
-   background-image:linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/velas.jpg);
+  
+}
+.imagen1{
+    background-image:linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/velas.jpg);
    background-size: cover;
    background-position: center;
 }
 
 .imagen2{
-    border-radius: 20px;
-    height: 80%;
-    width: 25%;
-    margin: 20px 20px 20px 20px;
-    padding: 0;
     background-image:linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/tarot.jpg);
-}
-
-.imagen3{
-    border-radius: 20px;
-    height: 80%;
-    width: 25%;
-    margin:  20px 20px 20px 20px;
-    padding: 0;
-    background-image: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/runas-vikingas.jpg);
+    background-size: cover;
     background-position: center;
 }
-.articles h4{
-    font-family: "fuente3";
-    font-size: 1.2em;
-    color: beige;
-    margin: 15px 4px 4px 4px;
-    display: flex;
-    background-color: #cf48cd;
-    justify-content: center;
-    border-radius: 20px;
+
+
+.imagen3{
+    background-image: linear-gradient(rgba(5, 7, 12, 0.75), rgba(5, 7, 12, 0.75)), url(./img/runas-vikingas.jpg);
+    background-position: center;
+    background-size: cover;
 }
-.articles p{
+
+.contain-arts h4{
+    width: 95%;
+    height: 35px;
+    background-color: #eb8fb2;
+    border-radius: 10px;
+    font-family: "fuente3";
+    font-size: 1em;
+    color: rgb(88, 8, 35);
+    text-decoration: underline;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contain-arts p{
     color: pink;
-    font-size: 2.5em;
+    font-size: 2em;
     margin: 3%;
 }
-.articles a{
+
+.contain-arts a{
     width: 100px;
     height: 35px;
     display: flex;
@@ -245,20 +268,26 @@ h1{
     align-items: center;
     background-color: #6c07ee;
     border-radius: 20px; 
+    transition: 1s;
 }
-.articles a:hover{
+
+.contain-arts a:hover{
     background-color: #cf48cd;
     color: aliceblue;
+    transform: scale(1.2);
 }
+
 .leer{
     margin-bottom: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .imagen2 a{
     margin-top: 15%;
 }
+
 .anotarse{
     width: 100%;
     padding-bottom: 2%;
@@ -293,33 +322,249 @@ h1{
 }
 .anotarse h4{
     font-family: "fuente3";
-    font-size: 1.4em;
+
     color: #d596f5;
     padding-top: 2%;
     margin: 0;
 }
-.anotarse li{
+.anotarse p{
     color: pink;
     font-family: "fuente2";
+    font-size: smaller;
+    
 }
-.div-bot{
-    padding-top: 5%;
+
+.trabajamos {
+    width: 100%;
+    padding-bottom: 3%;
+    background: radial-gradient(blueviolet, pink, blueviolet );
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.trabajamos-container {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.bot-registro{
-    width: 12%;
-    background-color: rebeccapurple;
-    color: whitesmoke;
-    border-radius: 10px;
+
+.trabajamos h2 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    color: rgb(38, 4, 70); 
+    text-decoration: underline;
+    font-family: "fuente3";
+    font-size: 2em;
 }
-.bot-registro:hover{
+
+.modos {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.modos div {
+    width: 20%;
+    height: 200px;
+    border-radius: 20px;
     background-color: pink;
-    color: #6c07ee;
-
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    transition: all 1s;
 }
 
+.modos div:hover {
+    background-color: #2b033f;
+    transform: scale(1.2);
+}
+
+.modos h4 {
+    font-family: "fuente3";
+    color: #2b033f;
+}
+
+.modos p {
+    padding-left: 2%;
+    color: pink;
+    font-family: "fuente2";
+    font-size: smaller;
+}
+
+
+
+.footer {
+    width: 100%;
+    padding-bottom: 5%;
+    background: radial-gradient(blueviolet, pink, blueviolet );
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.contain-footer {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.form-footer {
+    width: 40%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.footer h3 {
+    font-family: "fuente3";
+    font-size: 1.5em;
+    text-decoration: underline;
+}
+
+.contain-footer li {
+    font-family: "fuente2";
+    font-weight: 900;
+}
+
+.form-footer label {
+    font-family: "fuente3";
+    
+}
+
+.form-footer input {
+    margin-top: 20px;
+    border-radius: 10px;
+    border: none;
+    padding-left: 10px;
+    background-color: #eb8fb2;
+    transition: 1s;
+}
+
+.form-footer input:focus {
+    transform: scale(1.2);
+}
+
+.checkbox {
+    font-size: small;
+    font-weight: 100;
+}
+
+.bot-reg {
+    width: 100%;
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+.bot-reg button {
+    width: 200px;
+    height: 35px;
+    padding: 0;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: beige;
+    font-family: "fuente2";
+    font-size: small;
+    border-color: black;
+    border-style: solid;
+    border-radius: 10px;
+    overflow: auto;
+    background-color: blueviolet;
+    transition: 1s;
+}
+
+.bot-reg button:hover {
+    background-color: orchid;
+    font-size: small;
+    color: #6c07ee;
+    transform: scale(1.2);
+}
+
+@media (max-width: 1130px) {
+    .articles {
+        width: 100%;
+    }
+}
+
+@media (max-width: 964px) {
+    .contain-arts article {
+        width: 100%;
+    }
+}
+
+@media (max-width: 850px) {
+    .articles {
+        flex-direction: column;
+        width: 40%;
+        justify-content: space-around;
+    }
+    .articles h4 {
+        border-radius: 20px;
+    }
+    .container-anotarse {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+    .container-anotarse div {
+        width: 50%;
+        font-size: large;
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 800px) {
+    .container-anotarse div {
+        font-size: larger;
+    }
+    .modos {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    
+    .modos div {
+        width: 35%;
+        height: 250px;
+        margin-bottom: 2%;
+    }
+
+    .footer {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 580px){
+
+    .articles {
+        width: 70%;
+    }
+    .anotarse h2 {
+        font-size: 1.5em;
+    }
+    .container-anotarse div {
+        font-size: small;
+    }
+    h1 {
+        font-size: 3em;
+    }
+    .container {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+}
